--- a/blog.html
+++ b/blog.html
@@ -13,5 +13,6 @@ layout: default
 
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
     </article>
+    Random text injected - i want this to simpy be a white box seperating things
   {% endfor %}
 </div>
