--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,6 @@ layout: default
 
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
     </article>
-    <div id="spacer"></div>
+    <div id="spacer">' '</div>
   {% endfor %}
 </div>
