--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,7 @@ layout: default
 
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
     </article>
+    <!-- I added in a spacer to seperate posts - added id to style.scss as well -->
     <div id="spacer"></div>
   {% endfor %}
 </div>
